# Note-Naga-MIDI-Editor

./: .gitignore  CMakeLists.txt  README.md  note_naga_theme.qss  package-lock.json  rebuild.sh  resources.qrc
NoteNaga.app/Contents/: Info.plist
NoteNaga_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
NoteNaga_autogen/5LFZYOI4EH/: moc_dsp_block_widget.cpp  moc_dsp_block_widget.cpp.d  moc_dsp_engine_widget.cpp  moc_dsp_engine_widget.cpp.d  moc_midi_control_bar_widget.cpp  moc_midi_control_bar_widget.cpp.d  moc_midi_keyboard_ruler.cpp  moc_midi_keyboard_ruler.cpp.d  moc_midi_tact_ruler.cpp  moc_midi_tact_ruler.cpp.d  moc_routing_entry_widget.cpp  moc_routing_entry_widget.cpp.d  moc_track_list_widget.cpp  moc_track_list_widget.cpp.d  moc_track_mixer_widget.cpp  moc_track_mixer_widget.cpp.d  moc_track_widget.cpp  moc_track_widget.cpp.d
NoteNaga_autogen/67ADBPFK6O/: moc_audio_dial.cpp  moc_audio_dial.cpp.d  moc_audio_dial_centered.cpp  moc_audio_dial_centered.cpp.d  moc_audio_dial_grid_widget.cpp  moc_audio_dial_grid_widget.cpp.d  moc_audio_vertical_slider.cpp  moc_audio_vertical_slider.cpp.d  moc_button_group_widget.cpp  moc_button_group_widget.cpp.d  moc_indicator_led_widget.cpp  moc_indicator_led_widget.cpp.d  moc_midi_seq_progress_bar.cpp  moc_midi_seq_progress_bar.cpp.d  moc_multi_channel_volume_bar.cpp  moc_multi_channel_volume_bar.cpp.d  moc_separator.cpp  moc_separator.cpp.d  moc_spectrum_analyzer.cpp  moc_spectrum_analyzer.cpp.d  moc_stereo_volume_bar_widget.cpp  moc_stereo_volume_bar_widget.cpp.d  moc_vertical_combo_box.cpp  moc_vertical_combo_box.cpp.d  moc_vertical_label.cpp  moc_vertical_label.cpp.d  moc_volume_bar.cpp  moc_volume_bar.cpp.d
NoteNaga_autogen/MXUWEOXILK/: moc_main_window.cpp  moc_main_window.cpp.d
NoteNaga_autogen/SHNUYNANIC/: moc_dsp_block_chooser_dialog.cpp  moc_dsp_block_chooser_dialog.cpp.d  moc_instrument_selector_dialog.cpp  moc_instrument_selector_dialog.cpp.d  moc_mixer_settings_dialog.cpp  moc_mixer_settings_dialog.cpp.d
NoteNaga_autogen/TKOSHOSXRT/: moc_export_dialog.cpp  moc_export_dialog.cpp.d  moc_video_exporter.cpp  moc_video_exporter.cpp.d
NoteNaga_autogen/UBON6VJHIG/: moc_advanced_dock_widget.cpp  moc_advanced_dock_widget.cpp.d  moc_dock_indicator_overlay.cpp  moc_dock_indicator_overlay.cpp.d  moc_dock_title_bar.cpp  moc_dock_title_bar.cpp.d
NoteNaga_autogen/ZJBYQMUWQW/: moc_midi_editor_widget.cpp  moc_midi_editor_widget.cpp.d
note_naga_engine/: CMakeLists.txt  logger.cpp  note_naga_engine.cpp  note_naga_engine.h  note_naga_version.h.in
note_naga_engine/core/: mixer.cpp  mixer.h  project_data.cpp  project_data.h  types.cpp  types.h
note_naga_engine/doc/: note_naga_engine.drawio
note_naga_engine/dsp/: dsp_block_compressor.cpp  dsp_block_gain.cpp  dsp_block_pan.cpp  dsp_block_single_eq.cpp  dsp_factory.cpp
note_naga_engine/include/note_naga_engine/: note_naga_engine.h
note_naga_engine/include/note_naga_engine/core/: async_queue_component.h  audio_buffer.h  dsp_block_base.h  note_naga_synthesizer.h  project_data.h  types.h
note_naga_engine/include/note_naga_engine/dsp/: dsp_block_compressor.h  dsp_block_gain.h  dsp_block_pan.h  dsp_block_single_eq.h  dsp_factory.h
note_naga_engine/include/note_naga_engine/module/: audio_worker.h  dsp_engine.h  metronome.h  mixer.h
note_naga_engine/include/note_naga_engine/synth/: synth_external_midi.h  synth_fluidsynth.h
note_naga_engine/include/note_naga_engine/worker/: playback_worker.h
note_naga_engine/io/: midi_file.cpp  midi_file.h
note_naga_engine/module/: audio_worker.cpp  dsp_engine.cpp  metronome.cpp  mixer.cpp  playback_worker.cpp
note_naga_engine/note_naga_engine/: note_naga_version.h
note_naga_engine/note_naga_engine_autogen/: deps  mocs_compilation.cpp
note_naga_engine/note_naga_engine_autogen/4ANPIUP4PF/: moc_mixer.cpp  moc_mixer.cpp.d  moc_playback_worker.cpp  moc_playback_worker.cpp.d  moc_spectrum_analyzer.cpp  moc_spectrum_analyzer.cpp.d
note_naga_engine/note_naga_engine_autogen/GVXTOSZXL3/: moc_note_naga_engine.cpp  moc_note_naga_engine.cpp.d
note_naga_engine/note_naga_engine_autogen/HPSLOIXKEC/: moc_note_naga_synthesizer.cpp  moc_note_naga_synthesizer.cpp.d  moc_project_data.cpp  moc_project_data.cpp.d  moc_types.cpp  moc_types.cpp.d
note_naga_engine/synth/: synth_external_midi.cpp  synth_fluidsynth.cpp
note_naga_engine/worker/: playback_worker.cpp  playback_worker.h
scripts/: generate_source_list.py
src/: main.cpp  main_window.cpp  main_window.h  resources.qrc  resources.qrc.depends
src/core/: app_context.cpp  app_context.h  icons.h  midi_file.cpp  midi_file.h  mixer.cpp  mixer.h  playback_worker.cpp  playback_worker.h  shared.cpp  shared.h
src/dialogs/: instrument_selector_dialog.h
src/gui/: icons.cpp  main_window.cpp  main_window.h  nn_gui_utils.cpp  nn_gui_utils.h
src/gui/components/: animated_time_label.cpp  animated_time_label.h  audio_dial.cpp  audio_dial.h  audio_dial_centered.cpp  audio_dial_centered.h  audio_vertical_slider.cpp  audio_vertical_slider.h  indicator_led_widget.cpp  indicator_led_widget.h  midi_seq_progress_bar.cpp  midi_seq_progress_bar.h  multi_channel_volume_bar.cpp  (+7 more)
src/main_widgets/: midi_control_bar_widget.cpp  midi_control_bar_widget.h  midi_editor_widget.cpp  midi_editor_widget.h  midi_keyboard_ruler.cpp  midi_keyboard_ruler.h  midi_tact_ruler.cpp  midi_tact_ruler.h  routing_entry_widget.cpp  routing_entry_widget.h  track_list_widget.cpp  track_list_widget.h  track_mixer_widget.cpp  track_mixer_widget.h  track_widget.cpp  track_widget.h
src/media_export/: export_dialog.cpp  export_dialog.h  media_exporter.cpp  media_exporter.h  media_renderer.cpp  media_renderer.h  preview_worker.cpp  preview_worker.h
src/midi/: midi_file.h
src/note_naga_engine/: note_naga_engine.cpp  note_naga_engine.h
src/utils/: space_action.cpp  space_action.h
src/video_export/: export_dialog.cpp  export_dialog.h  preview_worker.cpp  preview_worker.h  video_exporter.cpp  video_exporter.h  video_renderer.cpp  video_renderer.h
src/widgets/: audio_dial.cpp  audio_dial_centered.cpp  volume_bar.cpp  volume_bar.h
(+43 files in other folders)
